feat: add task completion functionality, update PlanTemplate constraints, and enhance PlanService with new methods