@@ -2,17 +2,18 @@ package com.koino.backend.service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import com.koino.backend.dto.plan.PlanTemplateDTO;
 import com.koino.backend.dto.plan.UserActivePlanResponse;
 import com.koino.backend.dto.plan.UserPlanTaskResponse;
 import com.koino.backend.model.UserActivePlan;
 import com.koino.backend.model.UserPlanTask;
+import com.koino.backend.model.UserProfile;
 
 import com.koino.backend.repository.PlanTemplateRepository;
 import com.koino.backend.repository.UserActivePlanRepositor;
 import com.koino.backend.repository.UserPlanTaskRepository;
+import com.koino.backend.repository.UserProfileRepository;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -21,19 +22,25 @@ public class PlanService {
     private final PlanTemplateRepository planTemplateRepository;
     private final UserActivePlanRepositor activePlanRepository;
     private final UserPlanTaskRepository taskRepository;
+    private final UserProfileRepository userProfileRepository;
+    private final PlanGenerationService planGenerationService;
 
     public PlanService(
         PlanTemplateRepository planTemplateRepository,
         UserActivePlanRepositor activePlanRepository,
-        UserPlanTaskRepository taskRepository
+        UserPlanTaskRepository taskRepository,
+        UserProfileRepository userProfileRepository,
+        PlanGenerationService planGenerationService
     ) {
         this.planTemplateRepository = planTemplateRepository;
         this.activePlanRepository = activePlanRepository;
         this.taskRepository = taskRepository;
+        this.userProfileRepository = userProfileRepository;
+        this.planGenerationService = planGenerationService;
     }
 
     public List<PlanTemplateDTO> getAllAvailablePlans(){
-        return planTemplateRepository.findAll().stream()
+        return planTemplateRepository.findAllByOrderByPlanCodeAsc().stream()
             .map(plan -> new PlanTemplateDTO(
                 plan.getPlanTemplateId(),
                 plan.getPlanCode(),
@@ -45,7 +52,7 @@ public class PlanService {
                 plan.getBookNames(),
                 plan.getEstimatedMinutesPerDay()
             ))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Transactional(readOnly = true)
@@ -75,6 +82,54 @@ public class PlanService {
             .stream()
             .map(this::toTaskResponse)
             .toList();
+    }
+
+    @Transactional
+    public UserPlanTaskResponse completeTask(Long userId, Long taskId) {
+        UserPlanTask task = taskRepository
+            .findByTaskIdAndActivePlanUserUserId(taskId, userId)
+            .orElseThrow(() -> new IllegalArgumentException("Plan task not found"));
+        if (task.isCompleted()) {
+            return toTaskResponse(task);
+        }
+
+        UserActivePlan activePlan = task.getActivePlan();
+
+        UserActivePlan currentPlan = activePlanRepository
+            .findByUserUserIdOrderByPlanSequenceNumberAsc(userId)
+            .stream()
+            .filter(plan -> !plan.isCompleted())
+            .findFirst()
+            .orElseThrow(() -> new IllegalStateException("The user has no active plan"));
+
+        if (!currentPlan.getActivePlanId().equals(activePlan.getActivePlanId())) {
+            throw new IllegalStateException("Only tasks from the current plan can be completed");
+        }
+
+        task.setCompleted(true);
+        task = taskRepository.save(task);
+
+        if (!taskRepository.existsByActivePlanActivePlanIdAndIsCompletedFalse(
+            activePlan.getActivePlanId()
+        )) {
+            activePlan.setCompleted(true);
+            activePlanRepository.save(activePlan);
+
+            UserProfile profile = userProfileRepository.findByUserUserId(userId)
+                .orElseThrow(() -> new IllegalStateException(
+                    "The user has not completed onboarding"
+                ));
+            planGenerationService.generateNextPlan(
+                userId,
+                profile.getJourneyDescription(),
+                profile.getPreferredStartingPoint(),
+                profile.getDailyCapacityMinutes(),
+                profile.getWorkPace(),
+                activePlan.getPlanTemplate().getPlanCode()
+            );
+        }
+
+        return toTaskResponse(task);
     }
 
     private UserActivePlanResponse toActivePlanResponse(UserActivePlan activePlan) {
